--- a/style.css
+++ b/style.css
@@ -2,10 +2,8 @@
 
 font-family: 'Noto Sans', sans-serif;
 font-family: 'Noto Sans JP', sans-serif;
-font-family: 'Noto Sans Mono', monospace; */
-/* div {
-  border: 1px solid rgb(235, 218, 218);
-} */
+font-family: 'Noto Sans Mono', monospace; 
+color: rgb(125, 93, 67);*/
 /*reglages*/
 body {
   background-color: #fefee2;
@@ -31,6 +29,24 @@ p,
   width: 85%;
   margin: auto;
 }
+img {
+  box-shadow: 10px 11px 20px 0px rgba(0, 0, 0, 0.75);
+}
+/*nav*/
+nav {
+  width: 90%;
+  margin: auto;
+  background: radial-gradient(closest-side, #cfa510ea, #f6efde, #fefee2);
+  margin-top: 2%;
+  transition: 0.6s;
+}
+nav ul {
+  display: flex;
+  justify-content: space-around;
+}
+nav li {
+  list-style-type: none;
+}
 a {
   text-decoration: none;
   color: black;
@@ -42,23 +58,6 @@ a:link {
 a:hover {
   color: rgba(38, 36, 34, 0.968);
   text-decoration: underline;
-}
-img {
-  box-shadow: 10px 11px 20px 0px rgba(0, 0, 0, 0.75);
-}
-/*nav*/
-nav {
-  width: 90%;
-  margin: auto;
-  background: radial-gradient(closest-side, #cfa510ea, #f6efde, #fefee2);
-  margin-top: 2%;
-}
-nav li {
-  list-style-type: none;
-}
-nav ul {
-  display: flex;
-  justify-content: space-around;
 }
 /*corps*/
 #main {
@@ -84,7 +83,7 @@ article {
   border-bottom-right-radius: 50px;
 }
 article h2 {
-  text-decoration: underline overline black;
+  text-decoration: underline black;
 }
 article h3 {
   margin-bottom: -0.5em;
@@ -156,7 +155,7 @@ aside img {
   margin-top: 5em;
 }
 #outils h2 {
-  text-decoration: underline overline black;
+  text-decoration: underline black;
 }
 
 #outils_div {
@@ -246,21 +245,34 @@ footer {
   display: flex;
   flex-direction: row;
   width: 30%;
-  justify-content: space-between;
+  justify-content: space-around;
 }
+
 #footer p {
   padding: 0 10px 0 10px;
   font-size: 0.8em;
+  transition: 0.6s;
+}
+#footer p:hover {
+  transform: scale(1.2);
+}
+.a-icone:hover {
+  color: rgb(125, 93, 67);
 }
 #footer_autres {
   width: 30%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-top: 0.3em;
 }
 #footer_autres p {
   margin: 2px;
   font-size: 0.8em;
+}
+#footer_autres a:hover {
+  color: rgb(125, 93, 67);
+  text-decoration: none;
 }
 @media screen and (max-width: 800px) {
   #footer {
@@ -273,6 +285,6 @@ footer {
 @media screen and (max-width: 1085px) {
   #footer p,
   #footer_autres p {
-    font-size: 0.6em;
+    font-size: 0.7em;
   }
 }
