--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ iframe {
   box-shadow: 10px 11px 20px 0px rgba(0, 0, 0, 0.75);
 }
 
-/*************************** NAV ********************************************/
+/*************************** NAV *****************************************/
 nav {
   width: 90%;
   margin: auto;
@@ -271,19 +271,21 @@ footer {
   display: flex;
   flex-direction: row;
   width: 30%;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
 
 #footer p {
   padding: 0 10px 0 10px;
-  font-size: 0.8em;
+  font-size: 0.9em;
   transition: 0.6s;
 }
 
 #footer p:hover {
   transform: scale(1.2);
 }
-
+.a-icone {
+  font-size: 1.2em;
+}
 .a-icone:hover {
   color: rgb(125, 93, 67);
 }
@@ -298,7 +300,7 @@ footer {
 
 #footer_sites p {
   margin: 2px;
-  font-size: 0.8em;
+  font-size: 0.9em;
 }
 
 #footer_sites a:hover {
